<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp">


        <TextView
            android:id="@+id/tvQue1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lbl_que5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/que5_option_1"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbFerver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/que5_option_2"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbDryCough"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/que5_option_3"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbBreath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/que5_option_4"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbHeadache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/que5_option_5"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbNoseRunning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/que5_option_6"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>