<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <TextView
            android:id="@+id/tvQue1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_que2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_enter_name"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                tools:text="tet" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAge"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_age"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                tools:text="123" />
        </com.google.android.material.textfield.TextInputLayout>

        <requestFocus />

    </LinearLayout>

</ScrollView>