<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/back_white_36dp" />


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Covid-19"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Symptom Checker"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#2E2C2C" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvTestCenters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#DEE8DD"
                app:cardCornerRadius="3dp"
                app:cardElevation="8dp"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="6dp"
                        android:text="Risk of Covid-19*:"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="normal" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvRisk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="6dp"
                        android:text="Low Risk"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/colorLow"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="* This is based on current understanding of the disease which is subject to change. Please do consult the doctor and take their advice in case you are not feeling well."
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#5D5870"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="Recommendation"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#2E2C2C" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRec1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/lbl_rec_1"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#5D5870"
                android:textSize="14sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRec2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:text="@string/lbl_rec_2"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#5D5870"
                android:textSize="14sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRec3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:text="@string/lbl_rec_3"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#5D5870"
                android:textSize="14sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRec4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:text="@string/lbl_rec_4"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#5D5870"
                android:textSize="14sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRec5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:text="@string/lbl_rec_5"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#5D5870"
                android:textSize="14sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRec6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:text="@string/lbl_rec_6"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#5D5870"
                android:textSize="14sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRec7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/lbl_rec_7"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#5D5870"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>